Overlapping Issue in Cred Tracking

--- a/force-app/main/default/lwc/credentialTracking/credentialTracking.css
+++ b/force-app/main/default/lwc/credentialTracking/credentialTracking.css
@@ -18,3 +18,6 @@
 .imgAdjusted {
     margin-bottom: -1rem;
 }
+.text-align {
+    white-space: normal;
+}
